# maws2iotcore

./: .gitignore  Cargo.toml  Makefile  README.md  maws2iotcore.toml
src/: autodetect.rs  certificate.rs  config.rs  domain.txt  iotcore.rs  jwt.rs  linecodec.rs  main.rs  maws.rs
src/commands/: configure.rs  mod.rs  run.rs
src/lib/: autodetect.rs  certificate.rs  config.rs  error.rs  iotcore.rs  jwt.rs  linecodec.rs  logger.rs  maws.rs  mod.rs
