[package]
name = "maws2iotcore"
version = "0.2.0"
authors = ["Antti Peltonen <antti.peltonen@iki.fi>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
dotenv = "0.15"
log = "0.4"
pretty_env_logger = "0.4"
directories = "3.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
exitcode = "1.1"
bytes = "0.5"
futures = "0.3"
tokio-serial = "4.3"
tokio = { version = "0.2", features = ["macros"], default-features = false }
tokio-util = { version = "0.2", features = ["codec"], default-features = false }
paho-mqtt = { git = "https://github.com/eclipse/paho.mqtt.rust", branch = "develop" }
frank_jwt = "3.1"
serde_json = "1.0"
resolve = "0.2"
base64 = "0.12"
reqwest = "0.10"
dialoguer = "0.6"
openssl = "0.10"

# eof
